resources/gitops-config/operators/loki/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: promtail
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: grafana
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
  # Loki memberlist gossip (single-binary mode)
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: loki
    toPorts:
    - ports:
      - port: "7946"
        protocol: TCP
      - port: "7946"
        protocol: UDP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: loki
    toPorts:
    - ports:
      - port: "7946"
        protocol: TCP
      - port: "7946"
        protocol: UDP
  # loki-sc-rules sidecar watches kube-apiserver for ConfigMaps/Secrets
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  # Hetzner S3 for log storage
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
